merge ba